# degawong

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  degawong.cpp  todolist.md
algorithm/: CMakeLists.txt
algorithm/baseBlend/: CMakeLists.txt
algorithm/baseBlend/laplaceBlend/: CMakeLists.txt  cLaplaceBlending.cpp  cLaplaceBlending.h
algorithm/deformation/: CMakeLists.txt
algorithm/deformation/mls/: CMakeLists.txt  cMlsBase.cpp  cMlsBase.h
base/: CMakeLists.txt  degaFormat.h  degaPredefine.h
exception/: CMakeLists.txt  cDegaException.cpp  cDegaException.h  cFileExce.cpp  cFileExce.h  cMemoExce.cpp  cMemoExce.h  cParaExce.cpp  cParaExce.h
gui/: CMakeLists.txt  cDegaGui.cpp  cDegaGui.h
mat/: CMakeLists.txt  mat.cpp  mat.h  matrix.cpp  matrix.h  matx.cpp  matx.h  vec.h
time/: CMakeLists.txt  cDegaTime.cpp  cDegaTime.h
todo/: todolist.md
utils/: CMakeLists.txt
utils/batchDealing/: CMakeLists.txt  batchDealing.cpp  cRecursiveFind.cpp  cRecursiveFind.h
utils/faceLandmark/: CMakeLists.txt  cFaceOutline.cpp  cFaceOutline.h  faceLandmark.cpp
utils/imageFilter/: CMakeLists.txt  cImageFilter.cpp  cImageFilter.h  imageFilter.cpp
utils/imageMerge/: CMakeLists.txt  cImageMerge.cpp  cImageMerge.h  imageMerge.cpp
utils/imageProcess/: CMakeLists.txt  cImageProcess.cpp  cImageProcess.h  imageProcess.cpp
utils/recursiveFind/: CMakeLists.txt  cRecursiveFind.h  recursiveFind.cpp
utils/videoDealing/: CMakeLists.txt  cvideoDealing.cpp  cvideoDealing.h  videoDealing.cpp
