
AUX_SOURCE_DIRECTORY(. FILE_EXCEPTION_SRCS)

set(DIR_EXCEPTION_INCLUDE
    ./)
	
INCLUDE_DIRECTORIES(${DIR_EXCEPTION_INCLUDE})
foreach(SUB_DIR
    ${DIR_EXCEPTION_INCLUDE}
    )	
	FILE(GLOB_RECURSE SUB_EXCEPTION_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_EXCEPTION_HEADERS
		${SUB_EXCEPTION_HEADERS}
		${FILE_EXCEPTION_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_EXCEPTION_HEADERS}) 

ADD_LIBRARY(exception ${FILE_EXCEPTION_SRCS} ${FILE_EXCEPTION_HEADERS})