
AUX_SOURCE_DIRECTORY(. FILE_GUI_SRCS)

set(DIR_GUI_INCLUDE
	./
	../base
	../time
	../exception)
	
INCLUDE_DIRECTORIES(${DIR_GUI_INCLUDE})

foreach(SUB_DIR
    ${DIR_GUI_INCLUDE}
    )	
	FILE(GLOB_RECURSE SUB_GUI_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_GUI_HEADERS
		${SUB_GUI_HEADERS}
		${FILE_GUI_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_GUI_HEADERS}) 

ADD_LIBRARY(gui ${FILE_GUI_SRCS} ${FILE_GUI_HEADERS})

MESSAGE(STATUS "===============gui====================")
