
AUX_SOURCE_DIRECTORY(. FILE_MAT_SRCS)

set(DIR_MAT_INCLUDE
    ./
	../base
	../time
	../exception)	
	
INCLUDE_DIRECTORIES(${DIR_MAT_INCLUDE})

foreach(SUB_DIR
    ${DIR_MAT_INCLUDE}
    )	
	FILE(GLOB_RECURSE SUB_MAT_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_MAT_HEADERS
		${SUB_MAT_HEADERS}
		${FILE_MAT_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_MAT_HEADERS}) 

ADD_LIBRARY(mat ${FILE_MAT_SRCS} ${FILE_MAT_HEADERS})