
ADD_SUBDIRECTORY(imageMerge)
ADD_SUBDIRECTORY(imageFilter)
ADD_SUBDIRECTORY(imageProcess)
ADD_SUBDIRECTORY(recursiveFind)
# ADD_SUBDIRECTORY(videoDealing)

IF(DEGA_3RD_PARTY)
	# dlib
	IF(DEGA_3RD_PARTY_DLIB)
		ADD_SUBDIRECTORY(faceLandmark)
	ENDIF(DEGA_3RD_PARTY_DLIB)
ENDIF(DEGA_3RD_PARTY)
