
PROJECT(batchDealing)

AUX_SOURCE_DIRECTORY(. FILE_BATCHDEALING_SRCS)

set(DIR_BATCHDEALING_INCLUDE
    ./)
	
INCLUDE_DIRECTORIES(${DIR_BATCHDEALING_INCLUDE})
FILE(GLOB_RECURSE FILE_BATCHDEALING_HEADERS  ${DIR_BATCHDEALING_INCLUDE}/*.h)
SOURCE_GROUP("Head Files" FILES ${FILE_BATCHDEALING_HEADERS}) 

ADD_EXECUTABLE(batchDealing ${FILE_BATCHDEALING_SRCS} ${FILE_BATCHDEALING_HEADERS})

MESSAGE(STATUS "============batchDealing===============")