
PROJECT(batchDealing)

CMAKE_MINIMUM_REQUIRED (VERSION 2.5)

SET(CMAKE_CXX_STANDARD 17)

IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

AUX_SOURCE_DIRECTORY(. FILE_BATCHDEALING_SRCS)

set(DIR_BATCHDEALING_INCLUDE
    ./
	../../gui
	../../mat
	../../base
	../../time
	../../exception)
	
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${DIR_BATCHDEALING_INCLUDE})
foreach(SUB_DIR
    ${DIR_BATCHDEALING_INCLUDE}
    )	
	FILE(GLOB_RECURSE SUB_BATCHDEALING_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_BATCHDEALING_HEADERS
		${SUB_BATCHDEALING_HEADERS}
		${FILE_BATCHDEALING_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_BATCHDEALING_HEADERS}) 

ADD_LIBRARY(recursiveFind cRecursiveFind.cpp ${FILE_BATCHDEALING_HEADERS})

ADD_EXECUTABLE(batchDealing ${FILE_BATCHDEALING_SRCS} ${FILE_BATCHDEALING_HEADERS})

set(LIBS_DIR_ROOT
	gui
	mat
	time
    exception
	${OpenCV_LIBS})

TARGET_LINK_LIBRARIES(batchDealing ${LIBS_DIR_ROOT})

TARGET_LINK_LIBRARIES(recursiveFind ${LIBS_DIR_ROOT})
target_include_directories(recursiveFind PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "============batchDealing===============")