
PROJECT(faceLandmarkDemo)

CMAKE_MINIMUM_REQUIRED (VERSION 2.5)

SET(CMAKE_CXX_STANDARD 17)

IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

AUX_SOURCE_DIRECTORY(. FILE_FACELANDMARK_SRCS)

set(DIR_FACELANDMARK_INCLUDE
    ./
	../../gui
	../../mat
	../../base
	../../time
	../../exception)
	
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${DIR_FACELANDMARK_INCLUDE})

foreach(SUB_DIR
    ${DIR_FACELANDMARK_INCLUDE}
    )	
	FILE(GLOB_RECURSE SUB_FACELANDMARK_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_FACELANDMARK_HEADERS
		${SUB_FACELANDMARK_HEADERS}
		${FILE_FACELANDMARK_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_FACELANDMARK_HEADERS}) 

ADD_LIBRARY(faceLandmark cFaceOutline.cpp ${FILE_FACELANDMARK_HEADERS})

ADD_EXECUTABLE(faceLandmarkDemo ${FILE_FACELANDMARK_SRCS} ${FILE_FACELANDMARK_HEADERS})

set(LIBS_DIR_ROOT
	gui
	mat
	dlib
	time
    exception
	${OpenCV_LIBS})

TARGET_LINK_LIBRARIES(faceLandmarkDemo ${LIBS_DIR_ROOT})

TARGET_LINK_LIBRARIES(faceLandmark ${LIBS_DIR_ROOT})

TARGET_INCLUDE_DIRECTORIES(faceLandmark PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "============faceLandmark===============")
