
PROJECT(imageFilterDemo)

CMAKE_MINIMUM_REQUIRED (VERSION 2.5)

SET(CMAKE_CXX_STANDARD 17)

IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

AUX_SOURCE_DIRECTORY(. FILE_IMAGEFILTER_SRCS)

set(DIR_IMAGEFILTER_INCLUDE
    ./
	../../gui
	../../mat
	../../base
	../../time
	../../exception)
	
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${DIR_IMAGEFILTER_INCLUDE})

foreach(SUB_DIR
    ${DIR_IMAGEFILTER_INCLUDE}
    )	
	FILE(GLOB_RECURSE SUB_IMAGEFILTER_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_IMAGEFILTER_HEADERS
		${SUB_IMAGEFILTER_HEADERS}
		${FILE_IMAGEFILTER_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_IMAGEFILTER_HEADERS}) 

ADD_LIBRARY(imageFilter cImageFilter.cpp ${FILE_IMAGEFILTER_HEADERS})

ADD_EXECUTABLE(imageFilterDemo ${FILE_IMAGEFILTER_SRCS} ${FILE_IMAGEFILTER_HEADERS})

set(LIBS_DIR_ROOT
	gui
	mat
	time
    exception
	${OpenCV_LIBS})

TARGET_LINK_LIBRARIES(imageFilter ${LIBS_DIR_ROOT})

TARGET_LINK_LIBRARIES(imageFilterDemo ${LIBS_DIR_ROOT})

TARGET_INCLUDE_DIRECTORIES(imageFilter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "============imageFilter===============")
