
PROJECT(imageMergeDemo)

CMAKE_MINIMUM_REQUIRED (VERSION 2.5)

SET(CMAKE_CXX_STANDARD 17)

IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

AUX_SOURCE_DIRECTORY(. FILE_IMAGEMERGE_SRCS)

set(DIR_IMAGEMERGE_INCLUDE
    ./
	../../gui
	../../mat
	../../base
	../../time
	../../exception)
	
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${DIR_IMAGEMERGE_INCLUDE})

foreach(SUB_DIR
    ${DIR_IMAGEMERGEINCLUDE}
    )	
	FILE(GLOB_RECURSE SUB_IMAGEMERGE_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_IMAGEMERGE_HEADERS
		${SUB_IMAGEMERGE_HEADERS}
		${FILE_IMAGEMERGE_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_IMAGEMERGE_HEADERS}) 

ADD_LIBRARY(imageMerge cImageMerge.cpp ${FILE_IMAGEMERGE_HEADERS})

ADD_EXECUTABLE(imageMergeDemo ${FILE_IMAGEMERGE_SRCS} ${FILE_IMAGEMERGE_HEADERS})

set(LIBS_DIR_ROOT
	gui
	mat
	time
    exception
	${OpenCV_LIBS})

TARGET_LINK_LIBRARIES(imageMerge ${LIBS_DIR_ROOT})

TARGET_LINK_LIBRARIES(imageMergeDemo ${LIBS_DIR_ROOT})

TARGET_INCLUDE_DIRECTORIES(imageMerge PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "=============imageMerge===============")
