
PROJECT(imageProcessDemo)

CMAKE_MINIMUM_REQUIRED (VERSION 2.5)

SET(CMAKE_CXX_STANDARD 17)

IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

AUX_SOURCE_DIRECTORY(. FILE_IMAGEPROCESS_SRCS)

set(DIR_IMAGEPROCESS_INCLUDE
    ./
	../../gui
	../../mat
	../../base
	../../time
	../../exception)
	
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${DIR_IMAGEPROCESS_INCLUDE})

foreach(SUB_DIR
    ${DIR_IMAGEPROCESS_INCLUDE}
    )	
	FILE(GLOB_RECURSE SUB_IMAGEPROCESS_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_IMAGEPROCESS_HEADERS
		${SUB_IMAGEPROCESS_HEADERS}
		${FILE_IMAGEPROCESS_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_IMAGEPROCESS_HEADERS}) 

ADD_LIBRARY(imageProcess cImageProcess.cpp ${FILE_IMAGEPROCESS_HEADERS})

ADD_EXECUTABLE(imageProcessDemo ${FILE_IMAGEPROCESS_SRCS} ${FILE_IMAGEPROCESS_HEADERS})

set(LIBS_DIR_ROOT
	gui
	mat
	time
    exception
	${OpenCV_LIBS})

TARGET_LINK_LIBRARIES(imageProcess ${LIBS_DIR_ROOT})

TARGET_LINK_LIBRARIES(imageProcessDemo ${LIBS_DIR_ROOT})

TARGET_INCLUDE_DIRECTORIES(imageProcess PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "============imageProcess==============")
