
PROJECT(recursiveFindDemo)

CMAKE_MINIMUM_REQUIRED (VERSION 2.5)

SET(CMAKE_CXX_STANDARD 17)

IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

AUX_SOURCE_DIRECTORY(. FILE_RECURSIVEFIND_SRCS)

set(DIR_RECURSIVEFIND_INCLUDE
    ./
	../../gui
	../../mat
	../../base
	../../time
	../../exception)
	
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${DIR_RECURSIVEFIND_INCLUDE})

foreach(SUB_DIR
    ${DIR_RECURSIVEFIND_INCLUDE}
    )	
	FILE(GLOB_RECURSE SUB_RECURSIVEFIND_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_RECURSIVEFIND_HEADERS
		${SUB_RECURSIVEFIND_HEADERS}
		${FILE_RECURSIVEFIND_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_RECURSIVEFIND_HEADERS})

ADD_LIBRARY(recursiveFind cRecursiveFind.cpp ${FILE_RECURSIVEFIND_HEADERS})

ADD_EXECUTABLE(recursiveFindDemo ${FILE_RECURSIVEFIND_SRCS} ${FILE_RECURSIVEFIND_HEADERS})

set(LIBS_DIR_ROOT
	gui
	mat
	time
    exception
	${OpenCV_LIBS})

TARGET_LINK_LIBRARIES(recursiveFindDemo ${LIBS_DIR_ROOT})

TARGET_LINK_LIBRARIES(recursiveFind ${LIBS_DIR_ROOT})
target_include_directories(recursiveFind PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "============recursiveFind=============")