 
CMAKE_MINIMUM_REQUIRED (VERSION 2.5)

AUX_SOURCE_DIRECTORY(. FILE_LAPLACEBLEND_SRCS)

set(DIR_LAPLACEBLEND_INCLUDE
   	 ./
	../../../base
	../../../time
	../../../exception)


INCLUDE_DIRECTORIES(${DIR_LAPLACEBLEND_INCLUDE})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

foreach(SUB_DIR
	${DIR_LAPLACEBLEND_INCLUDE}
	)	
	FILE(GLOB_RECURSE SUB_LAPLACEBLEND_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_LAPLACEBLEND_HEADERS
		${SUB_LAPLACEBLEND_HEADERS}
		${FILE_LAPLACEBLEND_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_LAPLACEBLEND_HEADERS}) 

ADD_LIBRARY(laplaceBlend ${FILE_LAPLACEBLEND_SRCS} ${FILE_LAPLACEBLEND_HEADERS})

MESSAGE(STATUS "=============laplaceBlend=============") 
