 
CMAKE_MINIMUM_REQUIRED (VERSION 2.5)

set(PROJECT_NAME laplaceBlend)

AUX_SOURCE_DIRECTORY(. FILE_LAPLACEBLEND_SRCS)

set(DIR_LAPLACEBLEND_INCLUDE
   	 ./
	../../../base
	../../../time
	../../../exception)


INCLUDE_DIRECTORIES(${DIR_LAPLACEBLEND_INCLUDE})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

foreach(SUB_DIR
	${DIR_LAPLACEBLEND_INCLUDE}
	)	
	FILE(GLOB_RECURSE SUB_LAPLACEBLEND_HEADERS  ${SUB_DIR}/*.h)
	set(FILE_LAPLACEBLEND_HEADERS
		${SUB_LAPLACEBLEND_HEADERS}
		${FILE_LAPLACEBLEND_HEADERS})
endforeach()

SOURCE_GROUP("Head Files" FILES ${FILE_LAPLACEBLEND_HEADERS}) 

ADD_LIBRARY(laplaceBlend STATIC ${FILE_LAPLACEBLEND_SRCS} ${FILE_LAPLACEBLEND_HEADERS})

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

MESSAGE(STATUS "=============laplaceBlend=============") 
